--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChallengeZero12</string>
+    <string name="user_action_required">Toccare lo schermo per iniziare/riprendere il gioco</string>
+    <string name="punteggio">Punteggio:</string>
+    <string name="vite">Vite:</string>
 </resources>
