--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="si">SI</string>
     <string name="no">NO</string>
     <string name="fine_partita">PARTITA TERMINATA</string>
+    <string name="avvia_partita">Avvia la partita</string>
+    <string name="benvenuto">BENVENUTO</string>
 </resources>
